kubernetes/pruebas_wordpress/04-servicio-apache.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
    nodePort: 30000
  selector:
    app: wordpress
